# gala

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  Dockerfile  INSTALL.md  README.md  RELEASE.md  RELEASES.md  SUPPORT.md  biome.jsonc  bunfig.toml  clippy.toml  context7.json  deny.toml  docker-compose.yaml  lefthook.yml  mcp_servers.json  package-lock.json  package.json  renovate.json  rust-toolchain.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  compiler-engineer.md
.claude/rules/: compiler.md  rust.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
.opencode/plans/: gala-extensions-plan.md
apps/docs/: README.md  biome.json  components.json  global.css  oxlint.config.ts  package.json  playwright.config.ts  vercel.json  vitest.config.ts
bootstrap/: install.sh  setup-env.sh
compiler/: Cargo.toml  README.md
compiler/src/: ast.rs  codegen.rs  diagnostics.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs
cookbook/: CONTRIBUTING.md  README.md  RUNNING.md
cookbook/advanced/: README.md
cookbook/beginner/: README.md
cookbook/hybrid/: README.md
cookbook/quantum/: README.md
cookbook/references/: README.md
crates/gala-ast/: Cargo.toml
crates/gala-ast/src/: lib.rs
crates/gala-cli/: Cargo.toml
crates/gala-cli/src/: main.rs
crates/gala-codegen-classical/: Cargo.toml
crates/gala-codegen-classical/src/: lib.rs  llvm_codegen.rs
crates/gala-codegen-classical/src/llvm_codegen/: tests.rs
crates/gala-core/: Cargo.toml
crates/gala-diagnostics/: Cargo.toml
crates/gala-diagnostics/src/: lib.rs
crates/gala-diagnostics/src/explain/: E0101.md  E0102.md  E0201.md  E0301.md  E0401.md  E0501.md
crates/gala-diff/: Cargo.toml
crates/gala-diff/src/: lib.rs
crates/gala-driver/: Cargo.toml
crates/gala-driver/src/: db.rs  lib.rs
crates/gala-driver/tests/: conformance.rs  property_tests.rs  snapshot_tests.rs
crates/gala-driver/tests/snapshots/: snapshot_tests__classical_arithmetic_gir.snap  snapshot_tests__quantum_bell_gir.snap  snapshot_tests__simple_pure_gir.snap
crates/gala-fmt/: Cargo.toml
crates/gala-fmt/src/: lib.rs  main.rs
crates/gala-fmt/tests/: property_tests.rs  snapshot_tests.rs
crates/gala-fmt/tests/snapshots/: snapshot_tests__all_expression_types.snap  snapshot_tests__enum_definition.snap  snapshot_tests__round_trip_output.snap  snapshot_tests__struct_definition.snap
crates/gala-fuzz/: Cargo.toml
crates/gala-fuzz/src/: lib.rs
crates/gala-fuzz/src/corpus/: mod.rs
crates/gala-fuzz/src/generators/: program.rs
crates/gala-fuzz/src/oracles/: compile.rs  parse.rs
crates/gala-gir/: Cargo.toml
crates/gala-gir/src/: lib.rs
crates/gala-hir/: Cargo.toml
crates/gala-hir/src/: lib.rs
crates/gala-lexer/: Cargo.toml
crates/gala-lexer/src/: lib.rs
crates/gala-lexer/tests/: property_tests.proptest-regressions  property_tests.rs
crates/gala-lint/: Cargo.toml
crates/gala-lint/src/: lib.rs  main.rs
crates/gala-lsp/: Cargo.toml
crates/gala-opt/: Cargo.toml
crates/gala-opt/src/: lib.rs
crates/gala-parser/: Cargo.toml
crates/gala-parser/src/: lib.rs
crates/gala-parser/tests/: property_tests.rs  snapshot_tests.rs
crates/gala-parser/tests/snapshots/: snapshot_tests__bell_pair_ast.snap  snapshot_tests__classical_ast.snap  snapshot_tests__control_flow_ast.snap
crates/gala-pkg/: Cargo.toml
crates/gala-pkg/src/: lib.rs  main.rs
crates/gala-qir/: Cargo.toml
crates/gala-qir/src/: lib.rs
crates/gala-runtime/: Cargo.toml
crates/gala-runtime/src/: lib.rs
crates/gala-sim/: Cargo.toml
crates/gala-sim/src/: lib.rs
crates/gala-span/: Cargo.toml
crates/gala-std/: Cargo.toml
crates/gala-types/: Cargo.toml
crates/gala-types/src/: lib.rs
crates/gala-types/tests/: property_tests.rs
crates/gala-uncompute/: Cargo.toml
crates/gala-uncompute/src/: lib.rs
docs/: AGENTIC_BUILD_PLAN.md  ARCHITECTURE.md  BACKENDS_RUNTIME.md  COMPILER_PIPELINE.md  CONTRIBUTING.md  GLOSSARY.md  LANGUAGE_SPEC.md  README.md  ROADMAP.md  STANDARD_LIBRARY.md  TESTING_QA.md  TOOLCHAIN_DX.md  TYPE_SYSTEM.md  VISION.md
examples/: fib.gala  hello_world.gala
extensions/: README.md
extensions/bat/: Gala.sublime-syntax
extensions/cursor/: .cursorrules
extensions/helix/: languages.toml
extensions/highlight-js/: gala.js
extensions/intellij/: build.gradle.kts
extensions/prism/: gala.js
extensions/sublime/: Gala.sublime-completions  Gala.sublime-syntax  Preferences.sublime-settings
extensions/textmate/: Gala.tmLanguage
extensions/tree-sitter-gala/: Cargo.toml  README.md  build.rs  grammar.js  package.json
extensions/tree-sitter-gala/bindings/node/: index.d.ts  index.js
extensions/tree-sitter-gala/bindings/python/: setup.py
extensions/tree-sitter-gala/bindings/python/tree_sitter_gala/: __init__.py
extensions/tree-sitter-gala/bindings/rust/: lib.rs
extensions/tree-sitter-gala/bindings/swift/TreeSitterGala/: TreeSitterGala.swift
extensions/vscode/: language-configuration.json  package.json
extensions/zed/: gala.scm
fuzz/: .gitignore  Cargo.toml
fuzz/dict/: gala.dict
fuzz/fuzz_targets/: compile.rs  diagnostics.rs  parser.rs
homebrew/: README.md  configure.sh
homebrew/Formula/: gala.rb
scripts/: run.sh  test-coverage.sh
std/: core.gala  gates.gala  hardware.gala  ml.gala  noise.gala
tests/: conformance_test_parse.rs  integration_test.rs  test_cursor_textmate.py  test_highlightjs.py  test_intellij.py  test_prism.py  test_sublime.py  test_syntax_fixtures.py  test_treesitter.py  test_vim.py  test_vscode.py  test_zed_helix_bat.py
tests/fixtures/: bell.gala  classical.gala  if_expr.gala  simple.gala  variational.gala
tools/gala-cli/: Cargo.toml
tools/gala-cli/src/: main.rs
tools/gala-lint/: Cargo.toml
tools/gala-lint/src/: main.rs
tools/gala-pkg/: Cargo.toml
tools/gala-pkg/src/: main.rs
(+143 files in other folders)
