[workspace]
resolver = "2"
members = [
    "crates/gala-core",
    "crates/gala-span",
    "crates/gala-diagnostics",
    "crates/gala-lexer",
    "crates/gala-parser",
    "crates/gala-ast",
    "crates/gala-hir",
    "crates/gala-types",
    "crates/gala-uncompute",
    "crates/gala-gir",
    "crates/gala-diff",
    "crates/gala-opt",
    "crates/gala-qir",
    "crates/gala-codegen-classical",
    "crates/gala-sim",
    "crates/gala-runtime",
    "crates/gala-driver",
    "crates/gala-cli",
    "crates/gala-pkg",
    "crates/gala-fmt",
    "crates/gala-lsp",
    "crates/gala-lint",
    "crates/gala-std",
    "crates/gala-fuzz",
    # "extensions/tree-sitter-gala",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gala-lang/gala"

[workspace.dependencies]
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
rand = "0.8"
log = "0.4"

logos = "0.13"
chumsky = "0.11"
ariadne = "0.5"
lasso = "0.7"

salsa = "0.27"
ena = "0.8"
petgraph = "0.6"
proptest = "1.4"
insta = { version = "1.42", features = ["json"] }
libfuzzer-sys = "0.4"
cc = "1.0"

tower-lsp = { version = "0.20", features = ["runtime-tokio"] }
lsp-types = "0.98"

inkwell = { version = "0.2", features = ["llvm10-0", "target-x86", "target-aarch64"] }
roqoqo = { version = "0.6" }
roqoqo-quest = { version = "0.6" }

# Internal crate dependencies
gala-core = { path = "crates/gala-core" }
gala-span = { path = "crates/gala-span" }
gala-diagnostics = { path = "crates/gala-diagnostics" }
gala-lexer = { path = "crates/gala-lexer" }
gala-parser = { path = "crates/gala-parser" }
gala-ast = { path = "crates/gala-ast" }
gala-hir = { path = "crates/gala-hir" }
gala-types = { path = "crates/gala-types" }
gala-uncompute = { path = "crates/gala-uncompute" }
gala-gir = { path = "crates/gala-gir" }
gala-diff = { path = "crates/gala-diff" }
gala-opt = { path = "crates/gala-opt" }
gala-qir = { path = "crates/gala-qir" }
gala-codegen-classical = { path = "crates/gala-codegen-classical" }
gala-sim = { path = "crates/gala-sim" }
gala-runtime = { path = "crates/gala-runtime" }
gala-driver = { path = "crates/gala-driver" }
gala-cli = { path = "crates/gala-cli" }
gala-pkg = { path = "crates/gala-pkg" }
gala-fmt = { path = "crates/gala-fmt" }
gala-lsp = { path = "crates/gala-lsp" }
gala-lint = { path = "crates/gala-lint" }
gala-std = { path = "crates/gala-std" }
gala-fuzz = { path = "crates/gala-fuzz" }

[workspace.features]
default = ["frontend-only"]

frontend-only = []
qir = ["gala-qir/qir"]
classical = ["gala-codegen-classical/classical"]
sim = ["gala-sim/sim"]
full = ["qir", "classical", "sim"]