[package]
name = "gala-ast"
version = "0.1.0"
edition = "2021"
description = "AST and CST types with visitors for Gala"
license = "Apache-2.0"
repository = "https://github.com/gala-lang/gala"

[lib]
name = "gala_ast"
path = "src/lib.rs"

[dependencies]
gala-span.workspace = true
gala-diagnostics.workspace = true