[package]
name = "gala-codegen-classical"
version.workspace = true
edition.workspace = true
description = "Classical codegen (Cranelift/LLVM) for Gala"
license.workspace = true
repository.workspace = true

[lib]
name = "gala_codegen_classical"
path = "src/lib.rs"

[features]
default = []
classical = ["inkwell"]

[dependencies]
inkwell = { version = "0.2", features = ["llvm10-0", "target-x86", "target-aarch64"], optional = true }
gala-gir.workspace = true
gala-opt.workspace = true
gala-span.workspace = true
gala-diagnostics.workspace = true