[package]
name = "gala-lexer"
version = "0.1.0"
edition = "2021"
description = "Logos-based lexer for the Gala programming language"
license = "Apache-2.0"
repository = "https://github.com/gala-lang/gala"

[lib]
name = "gala_lexer"
path = "src/lib.rs"

[dependencies]
logos.workspace = true
gala-span.workspace = true
gala-diagnostics.workspace = true
[dev-dependencies]
proptest.workspace = true
insta.workspace = true
