[package]
name = "gala-pkg"
version = "0.1.0"
edition = "2021"
description = "Package manager for Gala"
license = "Apache-2.0"
repository = "https://github.com/gala-lang/gala"

[[bin]]
name = "gala-pkg"
path = "src/main.rs"

[lib]
name = "gala_pkg"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
semver.workspace = true
log.workspace = true
gala-span.workspace = true
gala-diagnostics.workspace = true