[package]
name = "tree-sitter-gala"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter grammar for the Gala programming language"
license = "Apache-2.0"
repository = "https://github.com/gala-lang/gala"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.21"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true