[package]
name = "gala-lint"
version = "0.1.0"
edition = "2021"
description = "Linter for the Gala programming language"

[[bin]]
name = "gala-lint"
path = "src/main.rs"

[dependencies]
gala-compiler.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
